syntax = "proto3";
option go_package = "/pb";

service authentication_service {
  rpc req_pq(req_pqRequest) returns (req_pqReply) {}
  rpc req_DH_params(req_DH_paramsRequest) returns (req_DH_paramsReply) {}
}

message req_pqRequest {
  string nonce = 1;
  int64 message_id = 2;
}

message req_pqReply {
  request_basic_info info = 1;
  int64 p = 2;
  int64 g = 3;
}

message req_DH_paramsRequest {
  request_basic_info info  = 1;
  int64 a = 2;
}

message req_DH_paramsReply{
  request_basic_info info  = 1;
  int64 b = 2;
}

message request_basic_info{
  string nonce = 1;
  string server_nonce = 2;
  int64 message_id = 3;
}
